--- a/.chezmoitemplates/nushell/internal.nu.tmpl
+++ b/.chezmoitemplates/nushell/internal.nu.tmpl
@@ -67,6 +67,7 @@ $env.config.completions.external = {
   completer: $external_completer
 }
 
+$env.STARSHIP_LOG = 'error'
 
 source ~/.cache/zoxide/init.nu
 source ~/.cache/starship/init.nu
