--- a/dot_bashint.tmpl
+++ b/dot_bashint.tmpl
@@ -1,5 +1,7 @@
 # Internal bash profile for handling completion
 
+export STARSHIP_LOG='error'
+
 # carapace completion
 export CARAPACE_BRIDGES='zsh,fish,bash,inshellisense' # optional
 source <(carapace _carapace)
