--- a/.chezmoiscripts/windows/run_onchange_before_1_install-winget-packages.ps1.tmpl
+++ b/.chezmoiscripts/windows/run_onchange_before_1_install-winget-packages.ps1.tmpl
@@ -22,6 +22,15 @@ $ErrorActionPreference = "Stop"
 {{ end }}
 #endregion
 
+$installDir = "C:\Program Files\KeePassXC"
+$currentPath = [Environment]::GetEnvironmentVariable("Path", [EnvironmentVariableTarget]::Machine)
+
+if ($currentPath -notlike "*$installDir*") {
+    $newPath = $currentPath + ";" + $installDir
+    [Environment]::SetEnvironmentVariable("Path", $newPath, [EnvironmentVariableTarget]::Machine)
+}
+
+
 #region Shells installation
 {{- if has "powershell" .shells }}
 winget install `
