--- a/.chezmoitemplates/scripts/debian.sh.tmpl
+++ b/.chezmoitemplates/scripts/debian.sh.tmpl
@@ -1,6 +1,7 @@
 
 sudo apt update
 
+#region Shell installation
 {{- if has "fish" .shells }}
     {{- if not (or (findExecutable "fish" (list "bin" "/usr/bin" ".local/bin")) (lookPath "fish")) }}
 sudo apt install fish
@@ -15,7 +16,9 @@ sudo apt update
 sudo apt install nushell
     {{- end }}
 {{- end }}
+#endregion
 
+#region Software installation
 {{- if has "core" .software_groups }}
 sudo apt install git
 {{- end }}
@@ -23,4 +26,12 @@ sudo apt install git
 {{- if has "tool" .software_groups }}
 # dependencies for vhs
 sudo apt install ffmpeg
+
+    {{- if not (or (findExecutable "nu" (list "bin" "/usr/bin" ".local/bin")) (lookPath "nu")) }}
+sudo apt install flatpak
+flatpak remote-add --user --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+    {{- end }}
+    
+flatpak install --user flathub io.anytype.anytype
 {{- end }}
+#endregion
