--- a/.chezmoitemplates/scripts/fedora.sh.tmpl
+++ b/.chezmoitemplates/scripts/fedora.sh.tmpl
@@ -1,4 +1,6 @@
 
+
+#region Shell installation
 {{- if has "fish" .shells }}
     {{- if not (or (findExecutable "fish" (list "bin" "/usr/bin" ".local/bin")) (lookPath "fish")) }}
 sudo dnf install fish
@@ -11,11 +13,20 @@ sudo dnf copr enable atim/nushell
 sudo dnf install nushell
     {{- end }}
 {{- end }}
+#endregion
 
+#region Software installation
 {{- if has "core" .software_groups }}
+sudo dnf install git
 {{- end }}
 
 {{- if has "tool" .software_groups }}
 # dependencies for vhs
 sudo dnf install ffmpeg-free
+
+    {{- if not (or (findExecutable "nu" (list "bin" "/usr/bin" ".local/bin")) (lookPath "nu")) }}
+sudo dnf install flatpak
+flatpak remote-add --user --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+    {{- end }}
 {{- end }}
+#endregion
