--- a/.chezmoitemplates/nushell/env.nu.tmpl
+++ b/.chezmoitemplates/nushell/env.nu.tmpl
@@ -1,3 +1,7 @@
+{{- if and (has "dev" .software_groups) (eq .chezmoi.os "linux") }}
+source $"($nu.home-path)/.cargo/env.nu"
+{{- end }}
+
 $env.CARAPACE_BRIDGES = 'zsh,fish,bash,inshellisense' # optional
 mkdir ~/.cache/carapace
 carapace _carapace nushell | save --force ~/.cache/carapace/init.nu
