Add aliases and small functions

--- a/.chezmoitemplates/nushell/config.nu.tmpl
+++ b/.chezmoitemplates/nushell/config.nu.tmpl
@@ -1,1 +1,54 @@
-source ($nu.default-config-dir  | path join 'internal.nu')
+source ($nu.data-dir  | path join 'internal.nu')
+
+# Functions
+
+## Create a new folder and jump inside
+def mk [dirname] {
+    mk $dirname
+    cd $dirname
+}
+
+## Show information about Git identity
+def gitid {
+    echo "Current identity is"
+    echo "Name: $(git config user.name)"
+    echo "Email: $(git config user.email)"
+}
+
+## Fix incorrect origin
+def fixor [origin?: string] {
+    match $origin {
+        null => {
+            let current_origin = (git remote get-url origin)
+            echo $"Current origin is: (ansi red)($current_origin)(ansi reset)"
+            echo "No origin provided. Usage: fixor <new-origin-url>"
+        }
+        _ => git remote set-url origin $origin
+    }
+}
+
+# Aliases
+# ls is already good in nushell
+# alias ls = eza
+alias ll = ls -l
+alias la = ls -a
+alias rm = rm -i
+alias mv = mv -i
+
+alias x = xmake
+alias xr = xmake run
+alias xc = xmake clean
+alias xbr = xmake; xmake run
+
+alias gd = gradle
+alias grr = gradle run
+alias grb = gradle build
+{{- if .chezmoi.os eq "linux" }}
+alias mvw = "./mvnw"
+{{ else }}
+alias mvw = "./mvnw.cmd"
+{{ end }}
+
+alias ca = cargo
+alias car = cargo run
+alias cab = cargo build -q
